<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Registration.NameFragment">

    <LinearLayout
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <ImageButton
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_left_arrow_gray"
            android:background="@color/white"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_like">
        </ImageView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/about_you" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/enter_name" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:autofillHints="false" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:id="@+id/nextButton"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/continue_button"
            android:textSize="18sp"
            android:background="@color/blue"
            android:layout_weight="0.5"
            android:layout_gravity="top"
            />
    </LinearLayout>

</FrameLayout>