<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Registration.DateBirthFragment">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:layout_marginBottom="20dp"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_left_arrow_gray"
            android:background="@color/white"
            android:layout_weight="1"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_like"
            android:background="@color/white"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/about_you" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        tools:context=".RegistrationActivity">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/enter_birth_date"/>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        >
        <Button
            android:id="@+id/nextButton"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/continue_button"
            android:textSize="18sp"
            android:background="@color/blue"
            android:layout_weight="0.5"
            android:layout_gravity="top"
            />
    </LinearLayout>

</FrameLayout>